// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckoutHeaderVanilla should render CheckoutProgressIndicatorVanilla section 1`] = `
<div
  className="test"
>
  <div
    className="checkout-progress-indicator"
  >
    <ul
      className="checkout-progress-bar "
    >
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        isComplete={true}
        name="Pickup"
        onClick={[Function]}
        stage="pickup"
      />
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        isComplete={true}
        name="Shipping"
        onClick={[Function]}
        stage="shipping"
      />
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        isComplete={true}
        name="Billing"
        onClick={[Function]}
        stage="billing"
      />
    </ul>
  </div>
</div>
`;

exports[`CheckoutHeaderVanilla should render CheckoutProgressIndicatorVanilla section with active stage  1`] = `
<div
  className="test"
>
  <div
    className="checkout-progress-indicator"
  >
    <ul
      className="checkout-progress-bar "
    >
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        isActive={true}
        key="pickup"
        name="Pickup"
      />
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        key="shipping"
        name="Shipping"
      />
      <Styled(StepIndicator)
        availableStages={
          Array [
            "pickup",
            "shipping",
            "billing",
          ]
        }
        key="billing"
        name="Billing"
      />
    </ul>
  </div>
</div>
`;
